--- a/reveal.js/index.html
+++ b/reveal.js/index.html
@@ -72,53 +72,36 @@
                 <section data-markdown="plugin/markdown/slideshow15.md" data-separator="^\n---\n$" data-separator-vertical="^\n--\n$">
                 </section>
 
-               
-                <!-- No "extra" slides, since there are no separators defined (so they'll become horizontal rulers) -->
-                <section data-markdown>
-                    <script type="text/template">
-                        A
-
-                        ---
-
-                        B
-
-                        ---
-
-                        C
-                    </script>
+                <section data-markdown="plugin/markdown/slideshow16.md" data-separator="^\n---\n$" data-separator-vertical="^\n--\n$">
                 </section>
 
-                <!-- Slide attributes -->
-                <section data-markdown>
-                    <script type="text/template">
-                        <!-- .slide: data-background="#000000" -->
-                        ## Slide attributes
-                    </script>
+                <section data-markdown="plugin/markdown/slideshow17.md" data-separator="^\n---\n$" data-separator-vertical="^\n--\n$">
+                </section>
+
+                <section data-markdown="plugin/markdown/slideshow18.md" data-separator="^\n---\n$" data-separator-vertical="^\n--\n$">
+                </section>
+
+                <section data-markdown="plugin/markdown/slideshow19.md" data-separator="^\n---\n$" data-separator-vertical="^\n--\n$">
+                </section>
+
+                <section data-markdown="plugin/markdown/slideshow20.md" data-separator="^\n---\n$" data-separator-vertical="^\n--\n$">
+                </section>
+
+                <section data-markdown="plugin/markdown/slideshow21.md" data-separator="^\n---\n$" data-separator-vertical="^\n--\n$">
+                </section>
+
+                <section data-markdown="plugin/markdown/slideshow22.md" data-separator="^\n---\n$" data-separator-vertical="^\n--\n$">
                 </section>
 
                 <!-- Element attributes -->
                 <section data-markdown>
                     <script type="text/template">
                         ## Element attributes
-                        - Item 1 <!-- .element: class="fragment" data-fragment-index="2" -->
-                        - Item 2 <!-- .element: class="fragment" data-fragment-index="1" -->
+                        - ![HTML5](http://www.w3school.com.cn/html5/index.asp) <!-- .element: class="fragment" data-fragment-index="2" -->
+                        - ![CSS3](http://www.w3school.com.cn/css3/index.asp) <!-- .element: class="fragment" data-fragment-index="1" -->
+                        - ![JavaScript](http://www.w3school.com.cn/js/index.asp)
                     </script>
                 </section>
-
-                <!-- Code -->
-                <section data-markdown>
-                    <script type="text/template">
-                        ```php
-                        public function foo()
-                        {
-                            $foo = array(
-                                'bar' => 'bar'
-                            )
-                        }
-                        ```
-                    </script>
-                </section>
-
             </div>
 		</div>
 
